--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to use Friends & Fiberworks theme</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
 
-    <h1>Hello world</h1>
-    
+    <h1>How to use Friends n Fiberworks</h1>
+
+    <section>
+        <h2></h2>
+    </section>
 </body>
 </html>
