--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <h1>How to use Friends n Fiberworks</h1>
 
     <section>
-        <h2></h2>
+        <div class="container">
+            <h2>How to separate product description and specification in product page.</h2>
+            <ol>
+                <li>
+                    <img src="./assets/split1.png" alt="">
+                    <p>Add the split &lt;!-- split --> in product description, place it anywhere you desire to split up the product description into two.</p>
+                </li>
+                <li>
+                    <img src="./assets/split2.png" alt="">
+                    Product description split into two, description and specifications.
+                </li>
+            </ol>
+        </div>
     </section>
 </body>
 </html>
