--- a/index.html
+++ b/index.html
@@ -25,5 +25,20 @@
             </ol>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h2>Product variants</h2>
+            <ol>
+                <li>
+                    Color variant must come first; size comes next.
+                    <img src="./assets/color1.png" alt="">
+                </li>
+                <li>
+                    Result
+                    <img src="./assets/color2.png" alt="">
+                </li>
+            </ol>
+        </div>
+    </section>
 </body>
 </html>
